@@ -1,4 +1,5 @@
 [1.7.7-SNAPSHOT]
+- Fixed nested defer() tasks immediately completing with parent
 
 [1.7.6]
 - Changed RenderLayer#render to public method
